IMP-1660: Remove "Thank you for choosing Home Improve" dialog window. IMP-1661: Fix text alignment in a "Confirm email"  window.

--- a/browser/src/app/auth/email-verification-hint/email-verification-hint.component.scss
+++ b/browser/src/app/auth/email-verification-hint/email-verification-hint.component.scss
@@ -15,6 +15,11 @@
 
   ::ng-deep email-verification-hint-card {
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+
+    .main-wrapper .top-block {
+      padding: 24px 24px 0;
+    }
+
   }
 
 }
