--- a/browser/src/app/shared/email-verification-hint-card/email-verification-hint-card.component.scss
+++ b/browser/src/app/shared/email-verification-hint-card/email-verification-hint-card.component.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 24px 24px 0px;
+    padding: 24px 0px 0px;
 
 
     .image-wrapper {
